fix progress spacing

--- a/src/styles/Generator.css
+++ b/src/styles/Generator.css
@@ -106,12 +106,12 @@ button[type=submit] {
   padding: 0.25em 0.5em;
 }
 
-.loading {
-  display: inline-block;
-  animation: rotate 2s linear infinite;
+.loading-info {
+  margin: 1em 0;
+  font-size: 0.9em;
 }
 
-.loading-info p {
-  font-size: 0.9em;
-  margin: 0.5em 0;
+.loading-info progress {
+  display: block;
+  margin: 0.25em auto;
 }
